Fix card margin on small screen sizes

--- a/resources/assets/sass/main.sass
+++ b/resources/assets/sass/main.sass
@@ -286,11 +286,10 @@ code
   +e(a-fb-c)
   +e(a-fb-ac)
   +e(a-fb-jsa)
-  +e(a-p-30, ml-p-0)
+  +e(a-p-20, ml-p-0)
   box-shadow: 0 0 30px rgba(0,0,0,.1), 0 0 3px rgba(0,0,0,.5)
   border-radius: 2px
-  margin-top: 20px
-  margin-bottom: 20px
+  margin-top: 1vh
   background-color: rgba(245,245,245,1)
 
 .content-card
